# Pelebel-ml

./: .gitattributes  .gitignore  LetterDetector.cs  Makefile  README.md  pyproject.toml
.gitbk/: config  index
.gitbk/logs/: HEAD
.gitbk/logs/refs/heads/: main
.gitbk/logs/refs/remotes/origin/: main
.gitbk/refs/remotes/origin/: main
model/: label_encoder.joblib  letter_classifier.joblib  rf_classifier.joblib
model/single-letter-models/: A.joblib  B.joblib  C.joblib  D.joblib  E.joblib  F.joblib  G.joblib  H.joblib  I.joblib  J.joblib  K.joblib  L.joblib  M.joblib  N.joblib  O.joblib  P.joblib  Q.joblib  R.joblib  S.joblib  T.joblib  U.joblib  V.joblib  W.joblib  X.joblib  Y.joblib  Z.joblib
model/single-letter-models-json/: A.json  B.json  C.json  D.json  E.json  F.json  G.json  H.json  I.json  J.json  K.json  L.json  M.json  N.json  O.json  P.json  Q.json  R.json  S.json  T.json  U.json  V.json  W.json  X.json  Y.json  Z.json
model/single-letter-models-onnx/: A.onnx  B.onnx  C.onnx  D.onnx  E.onnx  F.onnx  G.onnx  H.onnx  I.onnx  J.onnx  K.onnx  L.onnx  M.onnx  N.onnx  O.onnx  P.onnx  Q.onnx  R.onnx  S.onnx  T.onnx  U.onnx  V.onnx  W.onnx  X.onnx  Y.onnx  Z.onnx
scripts/: populate_not_a_letter.py
src/: aa  detect_letter.py  detect_single_letter.py  extract_landmarks.py  joblib_to_json.py  landmarks_utils.py  train_model.py  train_single_letter_model.py
