[project]
name = "letter-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hummingbird-ml>=0.4.12",
    "mediapipe>=0.10.32",
    "onnx>=1.16.1",
    "onnxruntime>=1.24.1",
    "onnxscript>=0.5.7",
    "opencv-python>=4.13.0.90",
    "scikit-learn>=1.8.0",
    "skl2onnx>=1.17",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
stubPath = "typings"
